fix text overflow of the subtitle

--- a/app/assets/stylesheets/views/bong.css.scss
+++ b/app/assets/stylesheets/views/bong.css.scss
@@ -81,6 +81,7 @@ html.bong_index {
       }
 
       p {
+        @include text-overflow;
         text-align: center;
       }
     }
